<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Activity Titles -->
    <string name="app_name">ServiceNow API</string>
    <string name="app_name_home">Home</string>
    <string name="app_name_approval">Approval</string>
    <string name="app_name_email">Email</string>
    <string name="app_name_incident">Incident</string>
    <string name="app_name_request">Request</string>
    <string name="app_name_setting">Settings</string>
    <string name="app_name_login">Login</string>

    <!-- Setting Labels -->
    <string name="setting_instance_header">Instance Settings</string>
    <string name="setting_instance_name">Instance Name</string>
    <string name="setting_instance_url">Instance URL</string>
    <string name="setting_instance_or">or</string>

    <!-- Menu Labels -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_stats">Show Stats</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_exit">Exit</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>


    <string name="button_change_instance">Change Instance</string>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>


    <!-- Fragment Labels -->
    <string name="label_instance_name">Instance Name:</string>
    <string name="label_user_name">Username:</string>
    <string name="label_last_login">Last Login:</string>
    <string name="label_Approvals">Approvals</string>
    <string name="label_Incidents">Incidents</string>


</resources>
